Correcting Scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,11 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-    background-color: transparent;
+    background-color: var(--light-bg);
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: var(--green);
+    background-color: var(--blue);
     border-radius: 5rem;
 }
 
